background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,18 +8,17 @@
   src: url("../resources/fonts//pokemon-solid.ttf");
 }
 
+html {
+  height:100%;
+  width:100%
+}
+
 /* background image */
 body {
   background-image: url("../resources/background.jpg");
-  background-repeat: no-repeat; 
-  background-position: center;
+  background-repeat: no-repeat;
   background-attachment: fixed;
-  webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height:100%;
-  width:100vw; 
+  background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
 }
 
